--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,3 +1,9 @@
+@import "null_style.scss";
+
+* {
+    font-family: 'MuseoModerno', sans-serif;
+}
+
 body {
     .wrapper {
         font-size: 26px;
@@ -7,4 +13,51 @@ body {
 .container {
     max-width: 950px;
     margin: 0 auto;
+    background-color: cadetblue;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #FFFFFF;
+}
+
+.representative {
+    display: flex;
+    flex-direction: column;
+    font-weight: 500;
+    font-size: 18px;
+    &__title {
+        font-size: 12px;
+        line-height: 12px;
+        margin-bottom: 7px;
+    }
+    &__subtitle {
+        line-height: 28.62px;
+    }
+}
+
+.phone {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    font-size: 18px;
+    &__number {
+        font-weight: 700;
+        line-height: 18px;
+        margin-bottom: 5px;
+    }
+}
+
+.button {
+    font-size: 12px;
+    line-height: 19.08px;
+    font-weight: 500;
+    text-transform: uppercase;
+    background: #C70101;
+    color: inherit;
+    border: 0;
+    border-radius: 5px;
+    padding: 7px 25px;
 }
