--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,6 @@ select {
 }
 
 body .wrapper {
-  position: relative;
   font-size: 26px;
   background-color: cadetblue;
 }
@@ -194,6 +193,8 @@ body .wrapper {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: relative;
+  z-index: 7;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -223,6 +224,8 @@ body .wrapper {
 }
 
 .main-screen {
+  position: relative;
+  z-index: 8;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -290,15 +293,17 @@ body .wrapper {
   text-decoration: underline;
 }
 
-.main-banner {
+.main__banner {
   position: absolute;
-  width: 1000px;
-  height: 1000px;
-  z-index: 5;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.main-banner img {
+.main__banner img {
   -o-object-fit: cover;
      object-fit: cover;
+  width: 1920px;
 }
 /*# sourceMappingURL=style.css.map */
