--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -6,7 +6,6 @@
 
 body {
     .wrapper {
-        position: relative;
         font-size: 26px;
         background-color: cadetblue;
     }
@@ -86,6 +85,8 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
+    position: relative;
+    z-index: 7;
     align-items: center;
     color: #FFFFFF;
 }
@@ -106,6 +107,8 @@ body {
 }
 
 .main-screen {
+    position: relative;
+    z-index: 8;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -146,12 +149,14 @@ body {
     }
 }
 
-.main-banner {
+.main__banner {
     position: absolute;
-    width: 1000px;
-    height: 1000px;
-    z-index: 5;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     & img {
-        object-fit: cover;  
+        object-fit: cover;
+        width: 1920px;
     }
 }
