--- a/css/style.css
+++ b/css/style.css
@@ -136,10 +136,11 @@ body .wrapper {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  gap: 30px;
+  min-width: 430px;
 }
 
 .advantage__item {
+  width: calc(1/3*100% - (1 - 1/3)*45px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
