--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -43,8 +43,9 @@ body {
 .advantage {
     display: flex;
     justify-content: space-between;
-    gap: 30px;
+    min-width: 430px;
     &__item {
+        width: calc(1/3*100% - (1 - 1/3)*45px);
         display: flex;
         flex-direction: column;
         align-items: center;
